# ladder

./: .gitignore  CMakeLists.txt
config/: schema.json  sf1k_params.csv
include/: context.h  dataflow.h  in_stream.h  operator.h  out_stream.h  utils.h
include/graph/: csr.h  graph_db.h  graph_view.h  i_csr.h  indexer.h  schema.h  scsr.h  types.h  vertex_map.h
include/ladder/: app.h  communicator.h  context.h  dataflow.h  in_stream.h  operator.h  out_stream.h  worker.h
include/property/: column.h  date.h  datetime.h  table.h  types.h
libs/: bi7.cc
misc/: install_dependencies.sh
src/graph/: schema.cc
tests/: test_graph_db.cc  test_schema.cc
